2001-07-01  Ezra Peisach  <epeisach@mit.edu>

	* state.c: Declate doclientstat() static and conditionalize
	inclusion if LINEMODE defined. 

	* sys_term.c: Declare getptyslave() and addard() static.

	* telnetd.c: Declare _gettermname() and getterminaltype() static.

	* utility.c: Declare putstr() and nextitem() static.

2001-06-22  Ezra Peisach  <epeisach@mit.edu>

	* telnetd.c (main): Change variable sin to sin4.
	(encrypt_failure): Change to not shadow global error_message.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* telnetd.c: Add prototypes for getent() and tgetent(). 

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Test if prototypes needed for setenv and unsetenv. 

	* ext.h: Provide prototypes for unsetenv and setenv if needed.

2001-06-19  Ezra Peisach  <epeisach@mit.edu>

	* utility.c (printsub): Ensure variable set before use.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* utility.c (printdata): Cast argument to isprint() to int.

2001-06-07  Ezra Peisach  <epeisach@mit.edu>

	* ext.h: Remove unused prototype for start_slave() and replace
	with one for startslave().

	* state.c: Add libtlnet/encrypt.h for missing prototypes.

	* sys_term.c: Add prototype for dup_tty(). Change getptyslave()
	from int to void. Cleanup an assignment in conditional warning. 

	* telnetd.c: Include libtelnet/misc-proto.h. Declare return from
	terminaltypeok() and main() as int.

	* utility.c: Include libtelnet/auth.h and libtelnet/encrypt.h for
	prototypes.

2001-04-27  Ken Raeburn  <raeburn@mit.edu>

	* telnetd.c (valid_opts): Note that 'w' takes a parameter.
	Reported by Nico Williams, <Nicolas.Williams@ubsw.com>.
	(main): Delete options 'N', 'u', 'i' that were removed from
	valid_opts in 1999.
	(usage): Don't show -u option.  Align output columns better.

2001-01-25  Tom Yu  <tlyu@mit.edu>

	* state.c (envvarok): Disallow LC_* and NLSPATH.

2000-12-06  Ken Raeburn  <raeburn@mit.edu>
