@@ -1,3 +1,7 @@
+2001-07-06  Ezra Peisach  <epeisach@mit.edu>
+
+	* sys_term.c (addarg): Cast char to long in indexing array.
+
 2001-07-01  Ezra Peisach  <epeisach@mit.edu>
 
 	* state.c: Declate doclientstat() static and conditionalize
